--- a/app/src/main/res/layout/activity_reservation_deails.xml
+++ b/app/src/main/res/layout/activity_reservation_deails.xml
@@ -226,10 +226,10 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_1sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
-                android:layout_marginRight="@dimen/_5sdp"
                 android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_1sdp"
                 android:background="@color/white"
                 app:contentPadding="@dimen/_5sdp">
 
@@ -373,10 +373,10 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_1sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
-                android:layout_marginRight="@dimen/_5sdp"
                 android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_1sdp"
                 android:background="@color/white"
                 app:contentPadding="@dimen/_5sdp">
 
@@ -677,10 +677,10 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_1sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
-                android:layout_marginRight="@dimen/_5sdp"
                 android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_1sdp"
                 android:background="@color/white"
                 app:contentPadding="@dimen/_5sdp">
 
@@ -868,10 +868,10 @@
                 android:id="@+id/card_manage_res"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_5sdp"
                 android:layout_marginLeft="@dimen/_5sdp"
-                android:layout_marginRight="@dimen/_5sdp"
                 android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginRight="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:background="@color/white"
                 app:contentPadding="@dimen/_5sdp">
 
@@ -995,9 +995,9 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="@dimen/_5sdp"
-                                    android:drawablePadding="@dimen/_10sdp"
                                     android:drawableRight="@drawable/ic_edit_black_24dp"
-                                    android:text="NA"
+                                    android:drawablePadding="@dimen/_10sdp"
+                                    android:text="NO"
                                     app:edittextfont="Raleway-Regular.ttf" />
                             </RelativeLayout>
                         </LinearLayout>
@@ -1048,9 +1048,9 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="@dimen/_5sdp"
-                                    android:drawablePadding="@dimen/_10sdp"
                                     android:drawableRight="@drawable/ic_edit_black_24dp"
-                                    android:text="NA"
+                                    android:drawablePadding="@dimen/_10sdp"
+                                    android:text="NOT SET"
                                     app:edittextfont="Raleway-Regular.ttf" />
                             </RelativeLayout>
                         </LinearLayout>
@@ -1101,9 +1101,9 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="@dimen/_5sdp"
-                                    android:drawablePadding="@dimen/_10sdp"
                                     android:drawableRight="@drawable/ic_edit_black_24dp"
-                                    android:text="NA"
+                                    android:drawablePadding="@dimen/_10sdp"
+                                    android:text="NO"
                                     app:edittextfont="Raleway-Regular.ttf" />
                             </RelativeLayout>
                         </LinearLayout>
@@ -1154,9 +1154,9 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="@dimen/_5sdp"
-                                    android:drawablePadding="@dimen/_10sdp"
                                     android:drawableRight="@drawable/ic_edit_black_24dp"
-                                    android:text="NA"
+                                    android:drawablePadding="@dimen/_10sdp"
+                                    android:text="NO"
                                     app:edittextfont="Raleway-Regular.ttf" />
                             </RelativeLayout>
                         </LinearLayout>
@@ -1258,7 +1258,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="@dimen/_5sdp"
-                                    android:text="NA"
+                                    android:text="NO"
                                     app:edittextfont="Raleway-Regular.ttf" />
                             </RelativeLayout>
                         </LinearLayout>
@@ -1309,9 +1309,9 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="@dimen/_5sdp"
-                                    android:drawablePadding="@dimen/_10sdp"
                                     android:drawableRight="@drawable/ic_edit_black_24dp"
-                                    android:text="NA"
+                                    android:drawablePadding="@dimen/_10sdp"
+                                    android:text="NO"
                                     app:edittextfont="Raleway-Regular.ttf" />
                             </RelativeLayout>
                         </LinearLayout>
@@ -1363,9 +1363,9 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="@dimen/_5sdp"
-                                    android:drawablePadding="@dimen/_10sdp"
                                     android:drawableRight="@drawable/ic_edit_black_24dp"
-                                    android:text="NA"
+                                    android:drawablePadding="@dimen/_10sdp"
+                                    android:text="NO"
                                     app:edittextfont="Raleway-Regular.ttf" />
                             </RelativeLayout>
                         </LinearLayout>
@@ -1416,9 +1416,9 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="@dimen/_5sdp"
-                                    android:drawablePadding="@dimen/_10sdp"
                                     android:drawableRight="@drawable/ic_edit_black_24dp"
-                                    android:text="NA"
+                                    android:drawablePadding="@dimen/_10sdp"
+                                    android:text="NO"
                                     app:edittextfont="Raleway-Regular.ttf" />
                             </RelativeLayout>
                         </LinearLayout>
@@ -1432,12 +1432,12 @@
         android:id="@+id/fab_send_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/_20sdp"
         android:src="@drawable/fab_send_msg"
         android:tooltipText="Send Message"
-        app:fabSize="normal"></android.support.design.widget.FloatingActionButton>
+        app:fabSize="normal" />
 </RelativeLayout>
 
