--- a/app/src/main/res/layout/activity_table_managment.xml
+++ b/app/src/main/res/layout/activity_table_managment.xml
@@ -27,5 +27,17 @@
             app:tabTextColor="#e0808080"></android.support.design.widget.TabLayout>
     </android.support.v4.view.ViewPager>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/_20sdp"
+        android:src="@drawable/ic_grid_on_black_24dp"
+        android:tooltipText="Send Message"
+        app:fabSize="normal" />
+
 
 </RelativeLayout>
