--- a/app/src/main/res/layout/table_layout_item.xml
+++ b/app/src/main/res/layout/table_layout_item.xml
@@ -9,19 +9,36 @@
     app:cardBackgroundColor="@color/colorPrimary">
 
 
-    <com.yberry.dinehawaii.customview.CustomTextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:maxLines="1"
-        android:padding="@dimen/_10sdp"
-        android:singleLine="true"
-        android:text="T1 (10)"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textColor="@color/white"
-        android:textStyle="bold" />
+        android:orientation="vertical"
+        android:padding="3dp">
 
+        <com.yberry.dinehawaii.customview.CustomTextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:maxLines="2"
+            android:text="T1 (10)"
+            android:textAppearance="@style/TextAppearance.AppCompat.Notification.Time"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+        <com.yberry.dinehawaii.customview.CustomTextView
+            android:id="@+id/tvTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:maxLines="2"
+            android:text="0-0"
+            android:textAppearance="@style/TextAppearance.AppCompat.Notification.Time"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+    </LinearLayout>
 </android.support.v7.widget.CardView>
