--- a/app/src/main/res/layout/table_layout_item.xml
+++ b/app/src/main/res/layout/table_layout_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
-    android:elevation="@dimen/_5sdp"
+    android:elevation="@dimen/_3sdp"
     app:cardBackgroundColor="@color/colorPrimary">
 
 
@@ -37,8 +37,9 @@
             android:gravity="center"
             android:maxLines="2"
             android:text="0-0"
-            android:textAppearance="@style/TextAppearance.AppCompat.Notification.Time"
+            android:textAllCaps="false"
             android:textColor="@color/white"
+            android:textSize="@dimen/_8sdp"
             android:textStyle="bold" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
