--- a/app/src/main/res/menu/activity_customer_navi_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_customer_navi_drawer_drawer.xml
@@ -9,8 +9,11 @@
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/drawer_icon"
-
             android:title="My Profile" />
+        <item
+            android:id="@+id/nav_wallet"
+            android:icon="@drawable/drawer_icon"
+            android:title="My Wallet" />
         <item
             android:id="@+id/nav_orderhistory"
             android:icon="@drawable/drawer_icon"
@@ -37,7 +40,7 @@
             android:id="@+id/nav_myreview"
             android:icon="@drawable/drawer_icon"
             android:title="My Reviews" />
-       <item
+        <item
             android:id="@+id/navFeedback"
             android:icon="@drawable/drawer_icon"
             android:title="My Feedbacks" />
